[package]
name = "ether-keystore"
version = "0.1.0"
authors = ["tritone11 <tritone11>"]
edition = "2018"
description = "Rust crate for creating and unlocking of Ethereum keystores"
repository = "https://github.com/tritone11/ether-keystore"
keywords = ["keystore", "rust","ether","ethereum"]
license = "GPL-2.0-or-later"

[lib]
name = "ethereum_keystore"
path = "src/lib.rs"

[dependencies]
time = "0.1"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
regex = "1.0"
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.2"
uuid = { version = "0.5", features = ["serde", "v4"] }
secp256k1 = { version = "0.9", features = ["rand"] }
rand = "0.3"
byteorder= "1.2"
num = "0.2"
bitcoin = "0.13.2"
aes-ctr = "0.1"
sha2 = "0.7"
sha3 = "0.7"
pbkdf2 = "0.2"
scrypt = "0.1"
hmac = "0.6"
chrono = "0.4"
